--- a/Thesis_HMI/Properties/tchmipublish.config.json
+++ b/Thesis_HMI/Properties/tchmipublish.config.json
@@ -17,15 +17,15 @@
     "userName": "",
     "encryptedPassword": "",
     "encryptedTcHmiServerPassword": "Iv6oW4yyN+U0B4Oe/UGxyQ==",
-    "tcHmiServerHost": "127.0.0.1",
-    "tcHmiServerPort": "1010",
+    "tcHmiServerHost": "localhost",
+    "tcHmiServerPort": "1020",
     "socketTimeout": "60",
     "clientCertificateCN": "",
-    "tcHmiUseTLS": false,
+    "tcHmiUseTLS": true,
     "useClientCertificate": false,
     "launchBrowserAfterPublish": true,
     "tcHmiServerUserName": "__SystemAdministrator",
-    "tcHmiDestinationUrl": "http://127.0.0.1:1010",
+    "tcHmiDestinationUrl": "https://localhost:1020",
     "publishConfiguration": "remote",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
