--- a/Thesis_HMI/Properties/tchmipublish.config.json
+++ b/Thesis_HMI/Properties/tchmipublish.config.json
@@ -17,7 +17,7 @@
     "userName": "",
     "encryptedPassword": "",
     "encryptedTcHmiServerPassword": "Iv6oW4yyN+U0B4Oe/UGxyQ==",
-    "tcHmiServerHost": "localhost",
+    "tcHmiServerHost": "192.168.1.99",
     "tcHmiServerPort": "1020",
     "socketTimeout": "60",
     "clientCertificateCN": "",
@@ -25,7 +25,7 @@
     "useClientCertificate": false,
     "launchBrowserAfterPublish": true,
     "tcHmiServerUserName": "__SystemAdministrator",
-    "tcHmiDestinationUrl": "https://localhost:1020",
+    "tcHmiDestinationUrl": "https://192.168.1.99:1020",
     "publishConfiguration": "remote",
     "tcHmiSavePassword": true,
     "tcHmiIgnoreCertificateErrors": true
